added header and footer

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 
 <head>
-  <title></title>
-  <meta charset="utf-8">
+    <title></title>
+    <meta charset="utf-8">
 
-  <!-- Leave this here!  It renders the review buttons  -->
-  <script src='./evaluation/init.js'></script>
+    <!-- Leave this here!  It renders the review buttons  -->
+    <script src='./evaluation/init.js'></script>
 </head>
 
 <body>
+    <header>
+        <h1>This is a web site</h1>
+    </header>
+    <footer>
+        <p>this is the footer</p>
+    </footer>
 </body>
 
 </html>
