--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Leave this here!  It renders the review buttons  -->
     <script src='./evaluation/init.js'></script>
@@ -11,7 +12,7 @@
 
 <body>
     <header>
-        <h1>This is a web site</h1>
+        <h1 class="page-title">This is a website</h1>
     </header>
     <footer>
         <p>this is the footer</p>
