--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <header>
         <h1 class="page-title">This is a website</h1>
     </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <footer>
         <p>this is the footer</p>
     </footer>
