added section element and some introductory info

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <p>You may find amazing things about owls in this website.</p>
+    </section>
     <footer>
         <p>this is the footer</p>
     </footer>
