--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <section>
         <p>You may find amazing things about owls in this website.</p>
     </section>
+    <article>
+        <p>Owls can rotate their necks 270 degrees. A blood-pooling system collects blood to power their brains and eyes when neck movement cuts off circulation.</p>
+    </article>
     <footer>
         <p>this is the footer</p>
     </footer>
