added aside element and some links about owls

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     <article>
         <p>Owls can rotate their necks 270 degrees. A blood-pooling system collects blood to power their brains and eyes when neck movement cuts off circulation.</p>
     </article>
+    <aside>
+        <h2>More cool things about owls!!!</h2>
+        <ul>
+            <li>
+                <a href="https://www.audubon.org/news/13-fun-facts-about-owls">audubon.org</a>
+            </li>
+            <li>
+                <a href="https://birdwatchinghq.com/facts-about-owls/">birdwatchinghq.com</a>
+            </li>
+            <li>
+                <a href="https://chipperbirds.com/facts-about-owls/">chipperbirds.com</a>
+            </li>
+        </ul>
+
+
+
+    </aside>
     <footer>
         <p>this is the footer</p>
     </footer>
